--- a/views/pages/help.ejs
+++ b/views/pages/help.ejs
@@ -36,10 +36,14 @@
 		<div class="post" id="cant-log-in">
 			<div class="title">I can't log in!</div>
 			<div class="message">
-				If you are having problems logging in, try the following:<br>
-				Login with your discord tag (e.g., username#1234) for your username.<br>
+				<p>
+				Login with your discord tag (e.g., username#1234) for your username.
+				</p>
+				<p>
 				Click the 'CLICK TO SETUP' link send to you by the discord bot. Your account might not be made yet.<br>
+				</p><p>
 				To find out if you have made your account yet, send the bot the message <code>setup &lt;discord server name&gt;</code> and it will tell you if you have signed up for that server, and provide signup links if necassary. 
+				</p>
 			</div>
 		</div>
 		<div class="post" id="bot">
@@ -50,7 +54,9 @@
 		</div><div class="post" id="view-source">
 			<div class="title">Source Code</div>
 			<div class="message">
+				<p>
 				For those who are developers, or just curious to see the source code, <a class="no-swipe" href="https://github.com/tristanbeedell/homework-master" target="_blank">visit my github repository from here!</a> You can leave comments, create an issue, or even fork the code if you like.
+				</p>
 			</div>
 		</div>
 		
