--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -6,19 +6,57 @@
 
 <body>
 	<div class="header">
-		<h1>Homework Master</h1>
+		<h1>Homework Master
+		<span class="author">created by Tristan Beedell</span>
+
+		</h1>
 	</div>
 	<div class="content">
 		<div class="post">
-			<div class="title">Almost ready!</div>
-			<div class="author">created by Tristan Beedell</div>
+			<div class="title">School is Hard.</div>
 			<div class="message">
 				<p>
-					This website has been a lot of work, but still has a way to go. Feel free to tell me what you think of it so far. Any ideas and insights are welcome.
-					<a href="/help#contact">contact me with any ideas</a>
+					It sucks. It really sucks. School sucks. There's too much homework and I am clueless as
+					to how to do half of it. I'll often ask class mates for an easy way out. These are the general questions:
+					<ol>
+						<li>Is there homework?</li>
+						<li>When is it due?</li>
+						<li>How long will it take?</li>
+						<li><strike> Can I copy yours?</strike></li>
+						<li>What do I have to do?</li>
+						<li>How do I do that?</li>
+						<li>What workbook?</li>
+						<li>What does that mean?</li>
+						<li>Please, specifically, how do I actually complete this task?</li>
+						<li>Hello?</li>
+					</ol>
+					<br>
+					If I dont get a response, or my friends are equally clueless, I'm stuffed.
 				</p>
 			</div>
 		</div>
+		<div class="post">
+			<div class="title">Someone MUST know the answer!</div>
+			<div class="message">
+				<p>
+					Right? Right! Someone in my class knows exactly what's going on <em>and</em> wasn't half asleep in that lesson.
+					But who? Who do I ask? If only there was a convenient way to message a large group of people and have a
+					group discussion, benefiting everone that chooses to take part...
+					<h3>Discord!</h3>
+					Discord can gather people from all over into one group chat. (Literally, a discord "server" can include several
+					thousands of users.) Not only that, but it supports automation - robot users. So we're all set, I made a bot
+					that can automatically invite you into the server and put you into group text and voice chats with all your classmates,
+					all interfaced through this website!
+				</p>
+				<p>
+					Ever struggling with English? Message your entire English class. Just get discord, (it's easy to sign up) and ask for
+					an invite into the server or your year group's pin. Then enter the sets that you are in and that's it!<br>
+					Other features include writing the awesomest bio ever, checking your timetable on this site, and updates are being made
+					all the time. Have an idea? Don't hesitiate to tell me.
+				</p>
+			</div>
+		</div>
+
 	</div>
 	<% include ../partials/menu %>
 	<script src="/js/index.js"></script>
