--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,7 +13,7 @@
 	<meta name="theme-color" content="#ffffff">
 	<style>
 		:root {
-			--member-color: <%= session.user ? member.displayHexColor : false || 'cadetblue'%>;
+			--member-color: <%= session.user ? member.displayHexColor : false || 'palevioletred'%>;
 			--theme-color: <%= session.user ? color : false || 'cadetblue'%>
 		}
 	</style>
