--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -35,7 +35,7 @@
 				<div class="menu-content">
 					<% if (session.user) {%>
 					<a href="/me">My Account</a>
-					<a href="/guilds/<%= encodeURIComponent(member.guild.name).replace(/%20/g, '_') %>/members/<%= encodeURIComponent(member.displayName).replace(/%20/g, '_') %>">My Profile</a>
+					<a href="/<%= encodeURIComponent(member.guild.name).replace(/%20/g, '_') %>/@<%= encodeURIComponent(member.displayName).replace(/%20/g, '_') %>">My Profile</a>
 					<span class="important-link logout-modal">Log Out</span>
 					<% } else { %>
 					<a href="/login">Login</a>
